--- a/css/style-min-769px.css
+++ b/css/style-min-769px.css
@@ -15,7 +15,6 @@
         top: 20%;
         padding: 3rem;
         border: 0;
-        z-index: 1;
     }
 
     .banner__button {
